--- a/css/main.css
+++ b/css/main.css
@@ -84,11 +84,11 @@ header {
 
 .header-nav-right-about {
   letter-spacing: 0.7px;
+  padding-right: 13px;
 }
 
 .header-nav-right-search {
   letter-spacing: 0.7px;
-  padding-right: 13px;
 }
 
 .header-nav-right-image {
@@ -105,6 +105,7 @@ header {
   max-width: 920px;
   vertical-align: middle;
   padding-top: 163px;
+  letter-spacing: 1px;
 }
 
 .project {
@@ -114,6 +115,7 @@ header {
   margin: 0 auto;
   max-width: 300px;
   font-size: 90%;
+  margin-top: -6px;
 }
 
 /*----------------- Content ------------------*/
