--- a/css/main.css
+++ b/css/main.css
@@ -147,20 +147,158 @@ margin-left: 16.326531%; */
   font-weight: 400;
   line-height: 108%;
   letter-spacing: -1px;
+  margin-bottom: 3px;
+  margin-left: 1px;
+}
+
+.postAuthor {
+  padding-top: 6px;
+  padding-left: 7px;
+}
+
+.authorspan {
+  display: inline-block;
+  height: 22px;
+
+}
+#authorName1 {
+  position: relative;
+  display: inline-block;
+  margin: 0;
+  text-decoration: none;
+  vertical-align: middle;
+  font-size: 75%;
+  margin-left: 5px;
+}
+
+#date {
+  position: relative;
+  display: inline-block;
+  font-size: 80%;
+  margin: 0;
+  text-decoration: underline;
+  vertical-align: middle;
+  margin-left: 3px;
+  color: #BAC6CE;
+}
+
+#on {
+  position: relative;
+  display: inline-block;
+  font-size: 80%;
+  text-decoration: none;
+  margin-left: 14px;
+  vertical-align: middle;
+  color: #BAC6CE;
 }
 
 #author-img1 {
+  margin-top: -4px;
+  position: relative;
   height: 22px;
   width: 22px;
   border-radius: 50%;
+  vertical-align: middle;
+}
+
+#p1 {
+  padding-top: 18px;
+  padding-left: 3px;
+  line-height: 26px;
+  letter-spacing: -0.51px;
+}
+
+#p2 {
+  padding-top: 10px;
+  padding-left: 3px;
+  line-height: 26px;
+  letter-spacing: -0.55px
+}
+
+#blockquote {
+  margin-left: 9px;
+  text-transform: uppercase;
+  padding-top: 9px;
+  padding-left: 16px;
+  margin-top: 22px;
+  padding-bottom: 4px;
+  margin-bottom: 21px;
+  border-left: 1px solid #BAC6CE;
+  letter-spacing: -1px;
+}
+
+#blockquotep {
+  font-size: 29px;
+  margin-top: 0px;
+  margin-left: 0px;
+  margin-bottom: 0px;
+}
+
+#p3 {
+  padding-top: 10px;
+  padding-left: 3px;
+  line-height: 26px;
+  letter-spacing: -0.44px
+}
+
+#p4 {
+  padding-top: 10px;
+  padding-left: 3px;
+  line-height: 26px;
+  letter-spacing: -0.44px
 }
 
 #btnContainer {
   text-decoration: none;
 }
 
+.btnContainer {
+  position: relative;
+}
+
 .buttonContainer {
   display: inline-block;
+  height: 30px;
+  width: 158px;
+  background-color: #A3B3BE;
+  margin-right: 10px;
+  position: relative;
+}
+
+.buttonlink {
+  position: relative;
+  vertical-align: middle;
+  margin-bottom: 4px;
+  text-decoration: none;
+}
+
+.buttonpic {
+  height: 30px;
+  width: 30px;
+  float: left;
+  position: relative;
+  vertical-align: middle;
+  background-color: #5E686E;
+  text-decoration: none;
+}
+
+.buttontext {
+  text-decoration: none;
+  color: white;
+  margin: 0;
+  font-size: 12px;
+  position: relative;
+  vertical-align: middle;
+  margin-left: 3px;
+  padding-top: 3px;
+}
+
+.buttontext p {
+  position: relative;
+  vertical-align: middle;
+  margin: 0;
+  margin-top: 3px;
+  text-align: center;
 }
 
 .content-section2 {
@@ -180,6 +318,10 @@ margin-right: 16.326531%; */
   border-radius: 50%;
   margin-left: 97px;
   margin-right: 97px;
+}
+
+#author-name {
+
 }
 
 .author-social {
