--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
 
 body {
   font-family: 'Open Sans', sans-serif;
+  margin: 0;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Oswald', sans-serif;
@@ -235,7 +236,7 @@ margin-left: 16.326531%; */
 }
 
 #p3 {
-  padding-top: 10px;
+  padding-top: 9px;
   padding-left: 3px;
   line-height: 26px;
   letter-spacing: -0.44px
@@ -245,7 +246,8 @@ margin-left: 16.326531%; */
   padding-top: 10px;
   padding-left: 3px;
   line-height: 26px;
-  letter-spacing: -0.44px
+  letter-spacing: -0.44px;
+  margin-bottom: 16px;
 }
 
 #btnContainer {
@@ -254,15 +256,30 @@ margin-left: 16.326531%; */
 
 .btnContainer {
   position: relative;
+  padding-left: 3px;
 }
 
 .buttonContainer {
   display: inline-block;
   height: 30px;
-  width: 158px;
-  background-color: #A3B3BE;
-  margin-right: 10px;
+/*   width: 158px;
+ */  background-color: #A3B3BE;
+  margin-right: -1px;
+  margin-top: 2px;
+  margin-left: 7px;
   position: relative;
+}
+
+#iconcontainer {
+  width: 158px;
+}
+
+#readlatercontainer {
+  width: 128px;
+}
+
+#sharecontainer {
+  width: 152px;
 }
 
 .buttonlink {
@@ -273,43 +290,86 @@ margin-left: 16.326531%; */
 }
 
 .buttonpic {
-  height: 30px;
-  width: 30px;
+  height: 28px;
+  width: 28px;
   float: left;
   position: relative;
   vertical-align: middle;
+  /* background-color: #5E686E; */
+  text-decoration: none;
+  padding-top: 1px;
+}
+ .btnpiccont {
+  height: 30px;
+  width: 31px;
   background-color: #5E686E;
   text-decoration: none;
+}
+
+#commentImage {
+  height: 26px;
+  width: 26px;
+  padding-left: 2px;
+  padding-top: 5px;
+}
+
+#readLaterImage {
+  height: 26px;
+  width: 26px;
+  padding-left: 2px;
+  padding-top: 5px;
+}
+
+#shareImage {
+  padding-left: 2px;
+  padding-top: 3px;
 }
 
 .buttontext {
   text-decoration: none;
   color: white;
   margin: 0;
-  font-size: 12px;
-  position: relative;
+  font-size: 13px;
+  position: absolute;
+  right: 0;
+  top: 3px;
   vertical-align: middle;
-  margin-left: 3px;
-  padding-top: 3px;
+  margin-left: 0px;
+  padding-top: 0px;
+/*   width: 125px;
+ */}
+
+#commenttext {
+  text-decoration: none;
+  width: 125px;
+
+}
+
+#readlatertext {
+  width: 100px;
+  text-decoration: none;
+}
+
+#sharetext {
+  width: 122px;
 }
 
 .buttontext p {
   position: relative;
   vertical-align: middle;
-  margin: 0;
-  margin-top: 3px;
+  margin: 3px auto;
   text-align: center;
+  text-dcoration: none;
 }
 
 .content-section2 {
-/*   max-width: 21.384615%;
-margin-right: 16.326531%; */
   max-width: 278px;
   display: inline-block;
   float: right;
   margin-top: 84px;
   margin-right: 160px;
   margin-left: 80px;
+  position: relative;
 }
 
 #author-img2 {
@@ -321,35 +381,80 @@ margin-right: 16.326531%; */
 }
 
 #author-name {
-
+  text-align: middle;
+  position: relative;
+  left: 94px;
+  color: #126DAE;
+  top: -11px;
+  font-size: 16.2px;
+  letter-spacing: -0.5px;
 }
 
+#author-social-list {
+  margin-top: -29px;
+}
 .author-social {
+  font-size: 15px;
   list-sytle: none;
   display: inline-block;
+  color: #A3B3BE;
+  margin-right: 6px;
 }
 
+#twitter {
+  margin-left: 2px;
+}
+
+#instagram {
+  margin-left: 2px;
+}
 .sidebar-image {
   height: 300px;
+  padding-top: 20px;
+  margin-top: 52px;
   width: 100%;
-  background-image: url('../images/girl.png');
+  background: linear-gradient( rgba(17, 117, 192, 0.75), rgba(17, 117, 192, 0.75)), url("../images/girl.png");
   background-size: cover;
   background-position: center center;
 }
 
+#ad {
+  text-align: right;
+  text-decoration: underline;
+  color: #5E686E;
+  font-size: 13px;
+  margin-right: 2px;
+  margin-top: 6px;
+}
+
+.sidebar-lowertitle {
+  font-size: 19px;
+  margin-top: 41px;
+  color: #004FA4;
+  font-weight: 300;
+  letter-spacing: 0.3px;
+  margin-bottom: 5px;
+}
+
 #sidebar-p {
   width: 278px;
+  font-size: 13.5px;
+  margin-top: 7px;
+  line-height: 23px;
 }
 
 .popPostsTitle {
-  height: 330px;
+  height: 214px;
   max-width: 100%;
 }
 
 #postTitle {
   width: 565px;
   margin: 0 auto;
-
+  padding-top: 91px;
+  font-size: 63px;
+  color: #083450;
+  font-weight: 400;
 }
 
 .post-section {
@@ -371,72 +476,81 @@ margin-right: 16.326531%; */
 }
 
 .post {
-  font-size: 20px;
+  position: relative;
   vertical-align: bottom;
+  color: #042E46;
+  font-size: 48px;
+
 }
 
 #post1 {
-  background-image: url('../images/wolf.png');
+  background: linear-gradient( rgba(17, 117, 192, 0.75), rgba(17, 117, 192, 0.75)), url("../images/wolf.png");
   background-size: cover;
   background-position: center center;
   width: 25%;
-  color: #07344F;
+  color: #042E46;
   font-family: "Open-sans", sans-serif;
   position: relative;
+  font-weight: 300;
 }
 
-#post1 h3 {
+#post1 h6 {
   position: absolute;
-  bottom: 0;
+  bottom: -70px;
   left: 10px;
+  letter-spacing: -1.2px;
 }
 
 #post2 {
-  background-image: url('../images/forest.png');
+  background: linear-gradient( rgba(17, 117, 192, 0.75), rgba(17, 117, 192, 0.75)), url("../images/forest.png");
   background-size: cover;
   background-position: center center;
   width: 25%;
-  color: #07344F;
+  color: #042E46;
   font-family: "Open-sans", sans-serif;
   position: relative;
 }
 
-#post2 h3 {
+#post2 h6 {
   position: absolute;
-  bottom: 0;
-  left: 10px;
+  bottom: -70px;
+  left: 16px;
+  letter-spacing: -1.2px;
 }
 
 #post3 {
-  background-image: url('../images/man.png');
+  background: linear-gradient( rgba(17, 117, 192, 0.75), rgba(17, 117, 192, 0.75)), url("../images/man.png");
   background-size: cover;
   background-position: center center;
   width: 25%;
-  color: #07344F;
+  color: #042E46;
   font-family: "Open-sans", sans-serif;
   position: relative;
 }
 
-#post3 h3 {
+#post3 h6 {
   position: absolute;
-  bottom: 0;
-  left: 10px;
+  bottom: -63px;
+  left: 17px;
+  letter-spacing: -1.2px;
+  line-height: 39px;
 }
 
 #post4 {
-  background-image: url('../images/girl2.png');
+  background: linear-gradient( rgba(17, 117, 192, 0.75), rgba(17, 117, 192, 0.75)), url("../images/girl2.png");
   background-size: cover;
   background-position: center center;
   width: 25%;
-  color: #07344F;
+  color: #042E46;
   font-family: "Open-sans", sans-serif;
   position: relative;
 }
 
-#post4 h3 {
+#post4 h6 {
   position: absolute;
-  bottom: 0;
-  left: 10px;
+  bottom: -70px;
+  left: 18px;
+  letter-spacing: -1.2px;
 }
 /*----------------- Footer -------------------*/
 
@@ -457,16 +571,26 @@ footer {
 }
 
 #footer-logo {
-  position: absolute;
+  float: left;
+  position: relative;
   left: 0;
   max-width: 490px;
+  vertical-align: middle;
+  margin: 0;
 }
 .footer-logo-img {
   display: inline-block;
+  position: relative;
+  vertical-align: middle;
+  top: 14px;
+  left: -8px;
+  float: left;
 }
 #footer-logo-text {
   display: inline-block;
   vertical-align: middle;
+  margin-top: 37px;
+  color: #A3B3BE;
 }
 
 
@@ -475,10 +599,15 @@ footer {
   padding: 0;
   max-width: 490px;
   position: absolute;
-  right: 0;
+  right: 4px;
   vertical-align: middle;
+  display: inline-block;
+  font-size: 13px;
 }
 .footer-nav-item {
   display: inline-block;
   list-style: none;
+  color: #A3B3BE;
+  margin-top: 38px;
+  margin-left: 5px;
 }
