--- a/css/main.css
+++ b/css/main.css
@@ -143,12 +143,21 @@ margin-left: 16.326531%; */
   margin-top: 21px;
 }
 
-#content1title {
+#content1title1 {
   font-size: 64px;
   font-weight: 400;
   line-height: 108%;
   letter-spacing: -1px;
   margin-bottom: 3px;
+  margin-left: 1px;
+}
+
+#content1title2 {
+  font-size: 64px;
+  font-weight: 400;
+  line-height: 108%;
+  margin-top: 0;
+  margin-bottom: 0px;
   margin-left: 1px;
 }
 
@@ -262,8 +271,7 @@ margin-left: 16.326531%; */
 .buttonContainer {
   display: inline-block;
   height: 30px;
-/*   width: 158px;
- */  background-color: #A3B3BE;
+  background-color: #A3B3BE;
   margin-right: -1px;
   margin-top: 2px;
   margin-left: 7px;
@@ -362,6 +370,14 @@ margin-left: 16.326531%; */
   text-dcoration: none;
 }
 
+.buttonContainer:hover .btnpiccont{
+  background-color: #073450;
+}
+
+.buttonContainer:hover {
+  background-color: #126DAE;
+}
+
 .content-section2 {
   max-width: 278px;
   display: inline-block;
@@ -378,6 +394,9 @@ margin-left: 16.326531%; */
   border-radius: 50%;
   margin-left: 97px;
   margin-right: 97px;
+  background: linear-gradient( rgba(17, 117, 192, 0.75), rgba(17, 117, 192, 0.75)), url("../images/me.jpg");
+  background-size: cover;
+  background-position: center center;
 }
 
 #author-name {
@@ -385,13 +404,13 @@ margin-left: 16.326531%; */
   position: relative;
   left: 94px;
   color: #126DAE;
-  top: -11px;
+  top: -5px;
   font-size: 16.2px;
   letter-spacing: -0.5px;
 }
 
 #author-social-list {
-  margin-top: -29px;
+  margin-top: -24px;
 }
 .author-social {
   font-size: 15px;
@@ -492,6 +511,7 @@ margin-left: 16.326531%; */
   font-family: "Open-sans", sans-serif;
   position: relative;
   font-weight: 300;
+  transition: background, color;
 }
 
 #post1 h6 {
@@ -499,6 +519,34 @@ margin-left: 16.326531%; */
   bottom: -70px;
   left: 10px;
   letter-spacing: -1.2px;
+}
+
+#post1::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  transition: background;
+}
+
+#post1:hover::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-image: url("../images/wolf.png");
+  background-size: cover;
+  background-position: center center;
+}
+
+#post1:hover h6{
+  color: white;
 }
 
 #post2 {
@@ -516,6 +564,34 @@ margin-left: 16.326531%; */
   bottom: -70px;
   left: 16px;
   letter-spacing: -1.2px;
+}
+
+#post2::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  transition: background;
+}
+
+#post2:hover::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-image: url("../images/forest.png");
+  background-size: cover;
+  background-position: center center;
+}
+
+#post2:hover h6{
+  color: white;
 }
 
 #post3 {
@@ -536,6 +612,34 @@ margin-left: 16.326531%; */
   line-height: 39px;
 }
 
+#post3::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  transition: background;
+}
+
+#post3:hover::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-image: url("../images/man.png");
+  background-size: cover;
+  background-position: center center;
+}
+
+#post3:hover h6{
+  color: white;
+}
+
 #post4 {
   background: linear-gradient( rgba(17, 117, 192, 0.75), rgba(17, 117, 192, 0.75)), url("../images/girl2.png");
   background-size: cover;
@@ -551,6 +655,34 @@ margin-left: 16.326531%; */
   bottom: -70px;
   left: 18px;
   letter-spacing: -1.2px;
+}
+
+#post4::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  transition: background;
+}
+
+#post4:hover::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-image: url("../images/girl2.png");
+  background-size: cover;
+  background-position: center center;
+}
+
+#post4:hover h6{
+  color: white;
 }
 /*----------------- Footer -------------------*/
 
